Web.sitemap added for Maintenance Nav Menu

--- a/AspAssignment/MasterPage.master
+++ b/AspAssignment/MasterPage.master
@@ -15,6 +15,8 @@
     </style>
 </head>
 <body>
+        
+    <form id="form1" runat="server">
     <header>
         <nav>
             <table class="auto-style1">
@@ -29,7 +31,12 @@
                         <asp:Label ID="lblNavSurvays" runat="server" Text="Survays"></asp:Label>
                     </td>
                     <td>
-                        <asp:Label ID="lblNavMaintenance" runat="server" Text="Maintenance"></asp:Label>
+                        <asp:Label ID="lblNavMaintenance" runat="server" Text="Maintenance"></asp:Label><asp:Menu ID="Menu1" runat="server" DataSourceID="SiteMapDataSource1" OnMenuItemClick="Menu1_MenuItemClick">
+                            <DataBindings>
+                                <asp:MenuItemBinding DataMember="SiteMapNode" Depth="5" />
+                            </DataBindings>
+                        </asp:Menu>
+                        <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" />
                     </td>
                     <td>
                         <asp:Label ID="lblNavContact" runat="server" Text="Contact"></asp:Label>
@@ -42,8 +49,7 @@
         </section>
     </header>
         
-    <form id="form1" runat="server">
-        <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
+        <asp:ContentPlaceHolder id="ContentPlaceHolderBody" runat="server">
         
         </asp:ContentPlaceHolder>
     </form>
